import "FriendInfoLite.proto";

message WebCrossPromotion
{
	optional string chanle 	= 1;	//ÇþµÀ
	optional string date	 	= 2;	//ÍÆ¹ãÈÕÆÚ
	repeated string cdk			= 3;		
	optional bool	  canuse	= 4[default = false];
}

message UserLogin_Req {
	required int32 siteid 				= 1;
	required string platform_id 	= 2;
	required string name 					= 3;
	required string profile_link 	= 4;
	required int32 gender 				= 5;
	required bool is_yellow_dmd 	= 6;
	required bool is_yellow_dmd_year = 7;
	required int32 yellow_dmd_lv 	= 8;
	repeated string friends_platid = 9; // plat_id
	required int32 webfd 					= 10;
	required string sid					 	= 11;
	optional int32 mydb_ret   		= 12[default = 0];	//ÒÑÊ§Ð§¶ÁÈ¡ÀÏÓÃ»§µÄ·µ»ØÖµ£¬·µ»ØÖµ£º 0:ÎÞ´ËÓÃ»§ 1£º²éÕÒ³É¹¦ -1£º¶ÁÈ¡´íÎó
	optional int32 mydb_oldid 		= 13[default = 0];	//ÒÑÊ§Ð§
	required int32 region 				= 14;	
	optional int64 uid 						= 15[default = 0];			
	optional int32 level 					= 16[default = 0];		
	optional int64 defregion 			= 17[default = 0];		//ÐÂÍæ¼Ò½øÈëµÄ·ÖÇø		
	optional int32 undealGiftCnt 	= 18[default = 0]; //Î´´¦ÀíµÄÀñÎïÊý
	optional int32 inviteFrdCnt 	= 19[default = 0]; //ÑûÇëºÃÓÑÊý
	optional uint32 yellowDmdtime = 20 [default = 0]; //»Æ×êË¢ÐÂÊ±¼ä
	optional int64 gettime 				= 21[default = 0];	//ÓÃÓÚ¼ÆËãÏûÏ¢ÔËÐÐÊ±¼ä		
	optional string invitefriendid		= 22 [default = '']; // ÑûÇë×Ô¼ºµÄÍæ¼ÒOpenID	
	optional bool isnewplayer = 23[default = false];//ÊÇ·ñÊÇÐÂÓÃ»§
	optional int32 undealFrdGiftCnt 	= 24[default = 0]; //Î´´¦ÀíµÄÀñÎïÊý
	optional int32 city 						= 25[default = 0];		//1±±¾©2ÉÏº£3¹ãÖÝ4ÉîÛÚ 0ÆäËû
	optional string via 						= 26;		//ÇþµÀ
	optional bool isrecall				  = 27[default = false];   //ÊÇ·ñÊÇ±»ÕÙ»ØÍæ¼Ò
	optional bool is_high_yellow_dmd = 28[default = false];   //ÊÇ·ñÊÇºÀ»ª»Æ×ê
	optional bool isApp51Act 				= 29[default = false];   //ÊÇ·ñÊÇ51»î¶¯ÓÃ»§
	optional int32	daySendGiftCnt			= 30[default = 0];	//Ã¿ÈÕÔùËÍµÄÀñÎï¸öÊý
	optional int32 	inviteFrdCntDay	 	 	= 31[default = 0]; //Ã¿ÈÕÑûÇëºÃÓÑÊýÁ¿
	optional int32	customFlag 				= 32[default = 0]; //»ØÁ÷Àñ°ü±ê¼Ç
	optional string taskMarketId			= 33[default = '']; //ÈÎÎñ
	optional int32  qqTaskStep				= 34[default = 0]; //ÈÎÎñ¼ÇÂ¼
	optional WebCrossPromotion promotion	= 35;					 			//½»²æÍÆ¹ã
	repeated int32	inviteGiftRecord = 36;							 //ÑûÇëºÃÓÑ½±Àø¼ÇÂ¼
	optional int32  nBackFlowFlag			= 37[default = 0];		//¿Õ¼ä»ØÁ÷Àñ°ü£¬1:¶¥²¿Ó¦ÓÃÇ½ 2£º×ó²àÓ¦ÓÃÁÐ±í
	optional int32  nAdultFlag        = 38[default = 100];		//ÊÇ·ñÍ¨¹ýÊµÃûÈÏÖ¤
	optional bool		is_high_dmd_year	= 39[default = false];	//ÊÇ·ñºÀ»ªÀ¶×êÄê·Ñ°æ
	optional uint32 bluedmdtime				= 40[default = 0];			//À¶×êË¢ÐÂÊ±¼ä
	optional int32 bluetime		= 41[default = 0];			//µ½ÆÚÊ±¼ä
	optional int32 blueyeartime			= 42[default = 0];
	optional int32 highbluetime			= 43[default = 0];
	optional int32 highblueyeartime	= 44[default = 0];
}


message UserLogin_Rsp {
	required int64 uid 				= 1;
	required string secret 		= 2;
	required string server 		= 3;
	required int32 port 			= 4;
	required int32 port1 			= 5;
	required int32 webfd 			= 6;
	required string sid 			= 7;
	required string mainload 	= 8;	//flash mainloader°æ±¾ºÅ
	required string version  	= 9;		//flash ÓÎÏ·ÅäÖÃÎÄ¼þ°æ±¾ºÅ
	required int32 region 		= 10;		
	optional int64 gettime 		= 11[default = 0];	//ÓÃÓÚ¼ÆËãÏûÏ¢ÔËÐÐÊ±¼ä		
	optional string platform_id = 12;
	optional int32 logintimes = 13;		//Ã¿ÌìµÚ¼¸´ÎµÇÂ½
	optional int32 playerlvl = 14;		//Ã¿ÌìÍæ¼ÒµÈ¼¶
	optional bool isnewplayer = 15[default = false];//ÊÇ·ñÊÇÐÂÓÃ»§
	optional int32	customFlag 	= 16[default = 0]; //»ØÁ÷Àñ°ü±ê¼Ç
	optional string channel			= 17[default = '']; //½»²æÍÆ¹ãÇþµÀ
} 

message WorkingStatus_Req {
	required int32 gid = 1;
	required bool finish = 2;
}

message UserAuth_Req {
	required int64 uid = 1;
	required int64 secret = 2;
	required int32 sockfd = 3;
}

message UserAuth_Rsp {
	required bool pass = 1;
}

message SendRemoteUser_Req {
	required int64 uid = 1;
	required int32 cmd = 2;
	required string text = 3;
}

message WG_UserLeave {
	required int32 fd = 1;
}

message GWG_FriendRequest
{
    optional int64          tuid = 1 [default = -1];
    optional bool           ret  = 2 [default = false];
    optional FriendInfoLite info = 3 ;
    optional int32          plat_type = 4 [default = 0];
    optional string         platid = 5 [default = ""];
    optional bool           is_plat_friend = 6 [default = true];
    optional int32          region = 7;
}

message ForwardInfo
{
    optional int64 uid = 1     [default = -1];
    optional string platid = 2 [default = "0"];
}

message WebGetRegion
{
    required string         openid          = 1;
    required int32          fd              = 2;
    repeated int32          srvRegion       = 3;
    optional int32          lastregion      = 4;
    required string         sid             = 5;
}

message GCG_PlanetLite
{
	optional int64 uid 					= 1;
	optional int32 planetId			= 2;
}

message GCG_City
{
	required int32  cityID 				= 1;
	optional int32 	x 					= 2;
	optional int32 	y					= 3;
	optional string name				= 4;
	repeated GCG_PlanetLite	planets 	= 5;
}

message GCG_CountryNeed
{
	optional int32 countrySrvID = 1;
	optional int32 region	 			= 2;
	optional int32 gameSrvID 		= 3;
}

message GRG_RegionNeed
{
	optional int32 regionSrvID = 1;
	optional int32 region	 			= 2;
	optional int32 gameSrvID 		= 3;
}

message GRG_RankNeed
{
	optional int32 rankSrvID 		= 1;
	optional int32 region	 			= 2;
	optional int32 gameSrvID 		= 3;
}


message GSG_StatNeed
{
	optional int32 statSrvID 		= 1;
	optional int32 region	 			= 2;
	optional int32 gameSrvID 		= 3;
}

message HttpAskMsg
{
	optional	string			szOpenid			=	1;
	optional	int64			nUid				=	2;
	optional	int32			nRegion				=	3;
	optional	int32			nType				=	4;
	optional	int32			nTypeSec			=	5;
	optional	string			szArgvs				=	6;
	optional  bool			bToQQ				= 7[default = false];
	optional  int32			nUserIP			= 8[default = 0];
	optional  int32			nModifyfee  = 9[default = 0];
	optional  int32     nTime				= 10[default = 0];
}

message HttpAnswerMsg
{
	optional	string			szOpenid			=	1;
	optional	int64			nUid				=	2;
	optional	int32			nRegion				=	3;
	optional	int32			nType				=	4;
	optional	int32			nTypeSec			=	5;
	optional	string			szAnswer			=	6;
}

message NewStar_Req
{
    optional string name = 1; //": "lxl",
    optional string url = 2; //": "pic",
    optional int32 planetId = 3; //": 1,
    optional int64 accountId = 4; //": 1036,
}

message NewStar_Rsp
{
	optional int32	id = 1;
	optional string sku = 2; //": "1:1:5",	
	optional int32 type = 3; //": 1,
	optional int32 name = 4; 
}

message GWG_BattleItemEnergy
{
	optional int32 sid = 1;
	optional string sku = 2;
	optional int32 num = 3;	
}

message GWG_Battle
{
	optional int32 coins = 1;
	optional int32 minerals = 2;
	repeated GWG_BattleItemEnergy BattleItemEnergy = 3;
}